# africanbitcoin

./: .gitignore  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac  libafricanbitcoinconsensus.pc.in
contrib/: README.md
contrib/debdeploy/: build.sh
contrib/init/: README.md  africanbitcoind.conf  africanbitcoind.init  africanbitcoind.openrc  africanbitcoind.openrcconf  africanbitcoind.service
contrib/macdeploy/: README.md  fancy.plist  macdeployqtplus
contrib/qos/: README.md
contrib/seeds/: nodes_main.txt  nodes_regtest.txt  nodes_test.txt
doc/: README.md  README_windows.txt  africanbitcoin-conf.md  build-freebsd.md  build-osx.md  build-unix.md  dependencies.md  files.md  shared-libraries.md  tor.md
doc/man/: Makefile.am  africanbitcoin-cli.1  africanbitcoin-qt.1  africanbitcoin-tx.1  africanbitcoin-wallet.1  africanbitcoind.1
share/: setup.nsi.in
share/examples/: africanbitcoin.conf
share/pixmaps/: ._bitcoin16.xpm  bitcoin128.xpm  bitcoin16.xpm  bitcoin256.xpm  bitcoin32.xpm  bitcoin64.xpm
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.qt.include  Makefile.qt_locale.include  africanbitcoin-cli-res.rc  africanbitcoin-cli.cpp  africanbitcoin-tx-res.rc  africanbitcoin-tx.cpp  africanbitcoin-wallet-res.rc  africanbitcoin-wallet.cpp  africanbitcoind-res.rc  africanbitcoind.cpp  amount.h  chainparams.cpp  chainparamsseeds.h  init.cpp  miner.cpp  miner.h  net_processing.cpp  pos.cpp  validation.cpp
src/consensus/: params.h
src/policy/: fees.cpp
src/qt/: README.md  bitcoin.cpp  bitcoin_locale.qrc  bitcoinamountfield.cpp  guiutil.cpp  (+14 more)
(+21 files in other folders)
